force-app/main/default/objects/AdminTool_OrgSnapshot__c/AdminTool_OrgSnapshot__c.object-meta.xml
<CustomObject>
    <description>Stores compact Org Comparison snapshots for drift and audit review.</description>
    <label>Admin Tool Org Snapshot</label>
    <nameField>
        <displayFormat>SNP-{000000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Admin Tool Org Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>