force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/ComparisonType__c.field-meta.xml
<CustomField>
    <fullName>ComparisonType__c</fullName>
    <label>Comparison Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>