force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/DifferenceCount__c.field-meta.xml
<CustomField>
    <fullName>DifferenceCount__c</fullName>
    <label>Difference Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>