force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/ExpiresAt__c.field-meta.xml
<CustomField>
    <fullName>ExpiresAt__c</fullName>
    <label>Expires At</label>
    <type>Date</type>
</CustomField>