force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/HighRiskCount__c.field-meta.xml
<CustomField>
    <fullName>HighRiskCount__c</fullName>
    <label>High Risk Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>