force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <label>Object API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>