force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/SnapshotJson__c.field-meta.xml
<CustomField>
    <fullName>SnapshotJson__c</fullName>
    <label>Snapshot JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>