force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/SnapshotName__c.field-meta.xml
<CustomField>
    <fullName>SnapshotName__c</fullName>
    <label>Snapshot Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>