force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/SnapshotVersion__c.field-meta.xml
<CustomField>
    <fullName>SnapshotVersion__c</fullName>
    <label>Snapshot Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>