force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/TargetName__c.field-meta.xml
<CustomField>
    <fullName>TargetName__c</fullName>
    <label>Target Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>