force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/TargetOrgLabel__c.field-meta.xml
<CustomField>
    <fullName>TargetOrgLabel__c</fullName>
    <label>Target Org Label</label>
    <length>180</length>
    <type>Text</type>
</CustomField>