force-app/main/default/objects/AdminTool_OrgSnapshot__c/fields/TotalRows__c.field-meta.xml
<CustomField>
    <fullName>TotalRows__c</fullName>
    <label>Total Rows</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>